Update in swagger.json
